force-app/main/default/objects/EQCC_Checked_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>AllObjectType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Checked Sheet is suggested by every Object Type</description>
        <label>AllObjectType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Questions__c</fullName>
        <description>This is used to calculate the forms completion percentage</description>
        <label>Form Questions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Count__c</fullName>
        <label>Group Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Task__c</fullName>
        <label>Group Task</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheet_Code__c</fullName>
        <label>Sheet Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending for approval</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>formNameLWC__c</fullName>
        <label>formNameLWC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManuallyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manually Created</label>
        <type>Checkbox</type>
    </fields>
    <label>EQCC Checked Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AllObjectType__c</columns>
        <columns>Form_Type__c</columns>
        <columns>Sheet_Code__c</columns>
        <columns>Group__c</columns>
        <columns>Form_Questions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EQCC Checked Sheet Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>